load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    "cpp_ros2_interface_library",
    "py_ros2_interface_library",
    "ros2_interface_library",
)
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier_test")
load("//bazel/cpp/uncrustify:defs.bzl", "uncrustify_test")
load("//bazel/arduino:defs.bzl", "upload_arduino_sketch")
load("@rules_yaml//:defs.bzl", "yaml_excerpt")

buildifier_test(
    name = "buildifier_check",
    lint_mode = "warn",
    mode = "check",
    verbose = True,
)

buildifier_test(
    name = "buildifier_fix",
    mode = "fix",
)

uncrustify_test(
    name = "uncrustify_check",
    check = True,
)

uncrustify_test(
    name = "uncrustify_fix",
)

compile_pip_requirements(
    name = "python_requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = ":requirements.txt",
    requirements_txt = ":requirements_lock.txt",
    tags = ["manual"],
)

exports_files([
    "requirements.txt",
    "requirements_lock.txt",
])

alias(
    name = "ros2_lifecycle",
    actual = "@com_github_mvukov_rules_ros2//ros2:ros2_lifecycle",
)

alias(
    name = "ros2_param",
    actual = "@com_github_mvukov_rules_ros2//ros2:ros2_param",
)

# Messages
filegroup(
    name = "ros_messages",
    srcs = ["msg/CANMessage.msg"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "test",
    outs = ["test.txt"],
    cmd = "touch $@",
)

# Config
filegroup(
    name = "project_config",
    srcs = ["config/config.yaml"],
    visibility = ["//visibility:public"],
)

ros2_interface_library(
    name = "balancing_robot_msgs",
    srcs = ["//:ros_messages"],
)

cpp_ros2_interface_library(
    name = "cpp_balancing_robot_msgs",
    visibility = ["//visibility:public"],
    deps = [":balancing_robot_msgs"],
)

py_ros2_interface_library(
    name = "py_balancing_robot_msgs",
    visibility = ["//visibility:public"],
    deps = [":balancing_robot_msgs"],
)

filegroup(
    name = "aarch64_launcher_template",
    srcs = ["support/tools/launch_package.py.template"],
    visibility = ["//visibility:public"],
)

# Arduino
yaml_excerpt(
    name = "arduino_config_data",
    src = ":project_config",
    path = "arduino",
)

filegroup(
    name = "blink_ino",
    srcs = ["arduino/blink/blink.ino"],
)

filegroup(
    name = "micro_ros_publisher_ino",
    srcs = ["arduino/micro_ros_publisher/micro_ros_publisher.ino"],
)

upload_arduino_sketch(
    name = "upload_sketch",
    config = ":arduino_config_data",
    libraries = [
        "@com_github_micro_ros_micro_ros_arduino//:micro_ros_arduino_zip",
        #"https://github.com/micro-ROS/micro_ros_arduino.git",
    ],
    sketch = ":micro_ros_publisher_ino",
    visibility = ["//visibility:public"],
)
