load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    "cpp_ros2_interface_library",
    "py_ros2_interface_library",
    "ros2_interface_library",
)
load("@com_github_mvukov_rules_ros2//third_party:expand_template.bzl", "expand_template")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier_test")
load("//bazel/cpp/uncrustify:defs.bzl", "uncrustify_test")
load("@rules_yaml//:defs.bzl", "yaml_excerpt")

buildifier_test(
    name = "buildifier_check",
    lint_mode = "warn",
    mode = "check",
    verbose = True,
)

buildifier_test(
    name = "buildifier_fix",
    mode = "fix",
)

uncrustify_test(
    name = "uncrustify_check",
    check = True,
)

uncrustify_test(
    name = "uncrustify_fix",
)

compile_pip_requirements(
    name = "python_requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = ":requirements.txt",
    requirements_txt = ":requirements_lock.txt",
    tags = ["manual"],
)

exports_files([
    "requirements.txt",
    "requirements_lock.txt",
])

alias(
    name = "ros2_lifecycle",
    actual = "@com_github_mvukov_rules_ros2//ros2:ros2_lifecycle",
)

alias(
    name = "ros2_param",
    actual = "@com_github_mvukov_rules_ros2//ros2:ros2_param",
)

# Config
filegroup(
    name = "project_config",
    srcs = ["config/config.yaml"],
    visibility = ["//visibility:public"],
)

# Messages
filegroup(
    name = "ros_messages",
    srcs = ["msg/CANMessage.msg"],
    visibility = ["//visibility:public"],
)

ros2_interface_library(
    name = "balancing_robot_msgs",
    srcs = ["//:ros_messages"],
)

cpp_ros2_interface_library(
    name = "cpp_balancing_robot_msgs",
    visibility = ["//visibility:public"],
    deps = [":balancing_robot_msgs"],
)

py_ros2_interface_library(
    name = "py_balancing_robot_msgs",
    visibility = ["//visibility:public"],
    deps = [":balancing_robot_msgs"],
)

filegroup(
    name = "launcher_template",
    srcs = ["support/tools/launch_package.py.template"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "upload_sketch_template",
    srcs = ["support/tools/upload_arduino_sketch.sh.template"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "sam_platform_patch",
    srcs = ["//bazel/patches:platform.txt"],
    visibility = ["//visibility:public"],
)

# Arduino
yaml_excerpt(
    name = "arduino_config_data",
    src = ":project_config",
    path = "arduino",
)

filegroup(
    name = "blink_ino",
    srcs = ["arduino/blink/blink.ino"],
)

filegroup(
    name = "micro_ros_publisher_ino",
    srcs = ["arduino/micro_ros_publisher/micro_ros_publisher.ino"],
)

CONFIG = ":arduino_config_data"

SKETCH = ":micro_ros_publisher_ino"

LIBRARIES = [
    "@com_github_henriksod_micro_ros_arduino-cortex_m3-arm-none-eabi-gcc-7-2017q4//:micro_ros_arduino_zip",
]

LOCAL_LIBRARIES = [lib for lib in LIBRARIES if lib.startswith(("@", "//", ":")) or lib.endswith(".zip")]

expand_template(
    name = "upload_sketch_script",
    out = "upload_sketch.sh",
    data = [
        CONFIG,
        SKETCH,
    ] + LOCAL_LIBRARIES,
    is_executable = True,
    substitutions = {
        "@@@CONFIG@@@": "$(rootpath {})".format(CONFIG),
        "@@@SKETCH@@@": "$(rootpath {})".format(SKETCH),
        "@@@LIBRARIES@@@": " ".join(["$(rootpath {})".format(lib) if (lib.startswith(("@", "//", ":")) or lib.endswith(".zip")) else lib for lib in LIBRARIES]),
    },
    template = ":upload_sketch_template",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "upload_sketch_packed",
    srcs = [
        ":sam_platform_patch",
        ":upload_sketch_script",
        "@com_github_arduino_arduino_cli//:arduino_cli_install",
        CONFIG,
        SKETCH,
    ] + LOCAL_LIBRARIES,
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "upload_sketch",
    srcs = [":upload_sketch_script"],
    data = [
        CONFIG,
        SKETCH,
    ] + [lib for lib in LIBRARIES if lib.startswith(("@", "//", ":"))],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_arduino_arduino_cli//:arduino_cli_install",
    ],
)
