# Copyright (c) 2023, Henrik Söderlund

load("@com_github_mvukov_rules_ros2//ros2:launch.bzl", "ros2_launch")

package(default_visibility = ["//visibility:public"])

ros2_launch(
    name = "micro_ros_agent_example",
    data = ["//:arduino_config"],
    launch_file = "micro_ros_agent_example.py",
    nodes = [
        "@com_github_micro_ros_micro_ros_agent//:micro_ros_agent",
        "//nodes/micro_ros_listener_example:micro_ros_listener_example_task",
    ],
)

ros2_launch(
    name = "serial_can_receiver_example",
    launch_file = "serial_can_receiver_example.py",
    nodes = [
        "//nodes/serial_can_receiver:serial_can_receiver_task",
    ],
)

ros2_launch(
    name = "serial_can_receiver_logger",
    launch_file = "serial_can_receiver_logger.py",
    nodes = [
        "//nodes/serial_can_receiver:serial_can_receiver_task",
        "//nodes/serial_can_logger:serial_can_logger_task",
    ],
)

ros2_launch(
    name = "chatter",
    launch_file = "chatter.py",
    nodes = [
        "//nodes/chatter:listener",
        "//nodes/chatter:talker",
    ],
)

#ros2_topic(
#    name = "can_data",
#    deps = [
#        "@ros2_common_interfaces//:py_std_msgs",
#    ],
#)

#ros2_bag(
#    name = "bag",
#    idl_deps = [
#        "@ros2_common_interfaces//:std_msgs",
#        "@ros2_rcl_interfaces//:rcl_interfaces",
#        "@ros2_rosbag2//:rosbag2_interfaces",
#    ],
#)

#container_image(
#    name = "serial_can_receiver_image",
#    base = "@ros_deploy_base//image",
#    binary = ":serial_can_receiver",
#    docker_run_flags = "-it --rm --network=host",
#)

#container_push(
#    name = "serial_can_receiver_publish",
#    format = "Docker",
#    image = ":serial_can_receiver_image",
#    registry = "docker.io",
#    repository = "henriksod/serial_can_receiver",
#    tag = "balancing_robot",
#)
