# Copyright (c) 2023, Henrik Söderlund

load("@com_github_mvukov_rules_ros2//ros2:py_defs.bzl", "ros2_py_binary")
load("@balancing_robot_pip_deps//:requirements.bzl", "requirement")
load("@rules_yaml//:defs.bzl", "yaml_excerpt")

yaml_excerpt(
    name = "config_data",
    src = "//:project_config",
    path = "nodes.serial_can_logger",
)

ros2_py_binary(
    name = "serial_can_logger_task",
    srcs = ["task.py"],
    data = [":config_data"],
    main = "task.py",
    visibility = ["//visibility:public"],
    deps = [
        "//:py_balancing_robot_msgs",
        "@ros2_rclpy//:rclpy",
        requirement("python-can"),
        requirement("pyyaml"),
    ],
)
