# Copyright (c) 2023, Henrik Söderlund

load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_binary")

cc_library(
    name = "crc8",
    hdrs = ["include/crc8.hpp"],
)

ros2_cpp_binary(
    name = "serial_can_receiver_task",
    srcs = ["task.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":crc8",
        "//:cpp_balancing_robot_msgs",
        "@com_github_wjwwood_serial//:cpp_serial",
        "@ros2_rclcpp//:rclcpp",
    ],
)
